Añadido la tradución de la página principal y menu.

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -1,6 +1,10 @@
 # Fichero de Internacionalización (i18n).(Ingles).
 # index.jsp
 #  Mensaje de Bienvenida
-index.mensaje = Welcome
+index.bienvenida = Welcome
 #  Nombre de la Aplicación
 index.nombreApp = Educational Management Aplication
+# Opciones de menu
+index.gestionAlumnos =Management Of Students
+index.gestionProfesores = Management Of Teachers
+index.gestionCursos = Management Of Course
