--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -1,6 +1,10 @@
 # Fichero de Internacionalización (i18n).(Castellano). 
 # index.jsp
 #  Mensaje de Bienvenida
-index.mensaje = Bienvenido
+index.bienvenida = Bienvenido
 #  Nombre de la Aplicación
 index.nombreApp = Aplicacion de Gestión Docente
+# Opciones de menu
+index.gestionAlumnos = Gestión de Alumnos
+index.gestionProfesores = Gestión de Profesores
+index.gestionCursos = Gestión de Cursos
