--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
@@ -1,6 +1,10 @@
 # Fichero de Internacionalización (i18n).(Euskera).
 # index.jsp
 #  Mensaje de Bienvenida
-index.mensaje = Ongi Etorri
+index.bienvenida = Ongi Etorri
 #  Nombre de la Aplicación
 index.nombreApp = Irakaskuntza Kudeaketa Aplikazioa 
+# Opciones de menu
+index.gestionAlumnos = Ikaslea Kudeaketa
+index.gestionProfesores = Irakasle Kudeaketa
+index.gestionCursos = Jakina kudeaketa
