--- a/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_es_ES.properties
@@ -3,3 +3,6 @@
 #mensaje de bienvenida 
 index.mensaje= Bienvenid@
 index.nombreApp= Aplicación de Gestión Docente
+menu.IdiomaE= Euskera
+menu.IdiomaI=Ingles
+menu.IdiomaE= Castellano
