--- a/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_eu_ES.properties
@@ -3,3 +3,6 @@
 #mensaje de bienvenida 
 index.mensaje= Ongietorri
 index.nombreApp= Irakaskuntza-Kudeaketaren Aplikazioa
+menu.IdiomaE= Euskara
+menu.IdiomaI=Ingelesa
+menu.IdiomaE= Gaztelania
