Implementado el login con idioma

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -1,10 +1,23 @@
 # Fichero de Internacionalización (i18n).(Ingles).
 # index.jsp
-#  Mensaje de Bienvenida
+# Opciones de menu (index)
 index.bienvenida = Welcome
-#  Nombre de la Aplicación
-index.nombreApp = Educational Management Aplication
-# Opciones de menu
+index.nombreApp = Teaching Management Application
 index.gestionAlumnos =Management Of Students
 index.gestionProfesores = Management Of Teachers
 index.gestionCursos = Management Of Course
+index.idioma = Language
+# login
+index.login.usuario = User
+index.login.username = User
+index.login.password = Password
+index.aceptar = Ok
+# idioma
+idioma.castellano = Spanish
+idioma.ingles = English
+idioma.euskera = Euskera
+# Operaciones Listados
+listadoOperacion.borrarAlumno = Delete
+listadoOperacion.modificarAlumno = Update
+# Listado de Alumno
+listadoAlumno.crearAlumno = Add Student
