--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
@@ -1,10 +1,23 @@
 # Fichero de Internacionalización (i18n).(Euskera).
 # index.jsp
-#  Mensaje de Bienvenida
+# Opciones de menu (index)
 index.bienvenida = Ongi Etorri
-#  Nombre de la Aplicación
 index.nombreApp = Irakaskuntza Kudeaketa Aplikazioa 
-# Opciones de menu
 index.gestionAlumnos = Ikaslea Kudeaketa
 index.gestionProfesores = Irakasle Kudeaketa
 index.gestionCursos = Jakina kudeaketa
+index.idioma = Hizkuntza
+# login
+index.login.usuario = Erabiltzaileak
+index.login.username = Erabiltzaileak
+index.login.password = Password
+index.aceptar = Onartu
+# idioma
+idioma.castellano = Gaztelako
+idioma.ingles = English
+idioma.euskera = Euskal
+# Operaciones Listados
+listadoOperacion.borrarAlumno = Ezabatu
+listadoOperacion.modificarAlumno = Aldaketa
+# Listado de Alumno
+listadoAlumno.crearAlumno = Sortu Ikaslea
