--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -1,10 +1,23 @@
 # Fichero de Internacionalización (i18n).(Castellano). 
 # index.jsp
-#  Mensaje de Bienvenida
+# Opciones de menu (index)
 index.bienvenida = Bienvenido
-#  Nombre de la Aplicación
 index.nombreApp = Aplicacion de Gestión Docente
-# Opciones de menu
 index.gestionAlumnos = Gestión de Alumnos
 index.gestionProfesores = Gestión de Profesores
 index.gestionCursos = Gestión de Cursos
+index.idioma = Idioma
+# login
+index.login.usuario = Usuario
+index.login.username = Usuario
+index.login.password = Password
+index.aceptar = Aceptar
+# idioma
+idioma.castellano = Castellano
+idioma.ingles = Ingles
+idioma.euskera = Euskera
+# Operaciones Listados (listadoOperacion)
+listadoOperacion.borrarAlumno = Borrar
+listadoOperacion.modificarAlumno = Modificar
+# Listado de Alumno (listadoAlumno)
+listadoAlumno.crearAlumno = Crear Alumno
