inicio de sesion y login

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -1,5 +1,16 @@
 #Ingles
 #index.jsp
 #mensaje de bienvenido
+heard.title = Education Management
+
 index.mensaje = Welcome
 index.nombreApp = Education management aplication
+
+index.login.username = Usuario
+index.login.password = contraseña
+index.login.idioma = Language
+index.login.enviar = Send
+
+idioma.castellano = Spanish
+idioma.euskera = Baske
+idioma.ingles = English
