--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -1,5 +1,16 @@
 #Español
 #index.jsp
 #mensaje de bienvenido
+heard.title = Gestión Docente
+
 index.mensaje = Bienvenido
 index.nombreApp = Aplicacion de Gestion Docente
+
+index.login.username = Usuario
+index.login.password = contraseña
+index.login.idioma = Idioma
+index.login.enviar = Enviar
+
+idioma.castellano = Castellano
+idioma.euskera = Euskera
+idioma.ingles = Ingles
