Creamos un login.Con su LoginServlet,en el index.jsp Contralmos si el usuario esta logeado o no para sacar difernetes vistas Creamos un filtro para la appl este toda ella(servlet-jsp) en utf-8 creamos un filtro de servlet forzar logeo
Damos estilos al login

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_es_ES.properties
@@ -3,6 +3,10 @@
 #mensaje de bienvenida 
 index.mensaje= Bienvenid@
 index.nombreApp= Aplicación de Gestión Docente
-menu.IdiomaE= Euskera
+index.login.idioma = Idioma
+index.login.user = Introduzca el usuario
+index.login.password = Introduzca la password
+
+menu.IdiomaEu= Euskera
 menu.IdiomaI=Ingles
 menu.IdiomaE= Castellano
