--- a/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_eu_ES.properties
@@ -3,6 +3,9 @@
 #mensaje de bienvenida 
 index.mensaje= Ongietorri
 index.nombreApp= Irakaskuntza-Kudeaketaren Aplikazioa
-menu.IdiomaE= Euskara
+index.login.idioma = Izkuntza
+index.login.user = Sartu usuario
+index.login.password = Sartu password
+menu.IdiomaEu= Euskara
 menu.IdiomaI=Ingelesa
 menu.IdiomaE= Gaztelania
