--- a/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controler/i18nmesages_en_EN.properties
@@ -3,6 +3,9 @@
 #Welcome message 
 index.mensaje= Welcome
 index.nombreApp= Teaching management application
-menu.IdiomaE= Baske
+index.login.idioma = Langage
+index.login.user = Insert user
+index.login.password = Insert  password
+menu.IdiomaEu= Baske
 menu.IdiomaI=English
 menu.IdiomaE= Spanish
