Añadimos los filtros

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = Bienvenido
 index.nombreapp = Aplicación de Gestión Docente
+index.login.username = Introduzca el nombre de usuario
+index.login.password = Introduzca la contraseña
+index.login.idioma = Idioma
+idioma.castellano = Castellano
+idioma.euskera = Vasco
+idioma.ingles = Ingles
+index.login.enviar = Enviar
