--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = Ongi Etorri
 index.nombreapp = Irakaskuntza Kudeaketa Aplikazioa
+index.login.username = Idatzi zure erabiltzailea
+index.login.password = Idatzi zure pasahitza
+index.login.idioma = Hizkuntza
+idioma.castellano = Gaztelako
+idioma.euskera = Euskera
+idioma.ingles = Ingelesaz
+index.login.enviar = Bidali
