--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -2,4 +2,11 @@
 #index.jsp
 #mensaje de bienvenida
 index.mensaje = Welcome
-index.nombreapp = Education Management Application 
+index.nombreapp = Education Management Application
+index.login.username = Enter Username
+index.login.password = Enter password
+index.login.idioma = Language
+idioma.castellano = Spanish
+idioma.euskera = Basque
+idioma.ingles = English
+index.login.enviar = Send
