--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = Welcome
 index.nombreApp = Education Management Application
+index.login.username = Insert your User Name
+index.login.password = Insert your password
+index.login.enviar = Send
+index.login.idioma = Language
+idioma.castellano  = Spanish
+idioma.euskera = Basque
+idioma.ingles = English
