--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = Bienvenido
 index.nombreApp = Aplicación de Gestión Docente
+index.login.username = Introduzca su nombre de usurio
+index.login.password = Introduzca su contraseña
+index.login.enviar = Enviar
+index.login.idioma = Idioma
+idioma.castellano = Castellano
+idioma.euskera = Euskera
+idioma.ingles = Ingles
