Copia antes de tocar el web.xml

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_en_EN.properties
@@ -3,3 +3,10 @@
 #Mensaje de bienvenida
 index.mensaje = Welcome
 index.nombreApp = Education Management Application
+index.login.username = User...
+index.login.password = Password...
+index.login.idioma = Language
+idioma.castellano = Spanish
+idioma.euskera = Basque
+idioma.ingles = English
+index.login.enviar = Send
