--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_es_ES.properties
@@ -3,3 +3,10 @@
 #Mensaje de bienvenida
 index.mensaje = Bienvenido
 index.nombreApp = Aplicación de Gestion Docente
+index.login.username = Usuario...
+index.login.password = Contraseña...
+index.login.idioma = Idioma
+idioma.castellano = Castellano
+idioma.euskera = Euskera
+idioma.ingles = Ingles
+index.login.enviar = Enviar
