--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_eu_ES.properties
@@ -3,3 +3,10 @@
 #Mensaje de bienvenida
 index.mensaje = Ongi etorri
 index.nombreApp = irakaskuntza kudeaketa Aplikazioa
+index.login.username = Erabiltzailea...
+index.login.password = Pasaitza...
+index.login.idioma = Hizkuntza
+idioma.castellano = Gaztelaniaz
+idioma.euskera = Euskaraz
+idioma.ingles = Ingelesaz
+index.login.enviar = Bidali
