Multiidioma finalizado y comenzando con filters y sesiones

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = Bienvenido
 index.nombreApp = Bienvenido a la Gestion Docente
+index.login.username = Introduzca su nombre de usuario
+index.login.password = Introduce tu contraseña
+index.login.idioma = Lenguage
+idioma.castellano = Castellano
+idioma.euskera = Euskera
+idioma.ingles = Ingles
+index.login.enviar = Enviar
