--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = OngiEtorri
 index.nombreApp = Irakaskuntza Kudeaketa Aplikazioa
+index.login.username = Idatzi zure erabiltzailea
+index.login.password = Idatzi zure pasahitza
+index.login.idioma = Hizkuntza
+idioma.castellano = Gazteleraz
+idioma.euskera = Euskaraz
+idioma.ingles = Ingelesez
+index.login.enviar = Bidali
