--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -3,3 +3,10 @@
 #mensaje de bienvenida
 index.mensaje = Welcome
 index.nombreApp = Education Management Aplication
+index.login.username = Introduce your User Name
+index.login.password = Introduce your password 
+index.login.idioma = Insert Language
+idioma.castellano = Spanish
+idioma.euskera = Basque
+idioma.ingles = English
+index.login.enviar = Send
