He añadido a los .properties mas i18n
He creado creado un packaqe para los filtros
	-CharterFilter + He programado el doFilter
	-ServletFilter + He programado el doFilter
	
He programado la session en el LoginServlet

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_es_ES.properties
@@ -3,3 +3,13 @@
 #mensaje de bienvenida
 index.mensaje = Bienvenido.
 index.nombreApp = Aplicación de Gestion Docente.
+index.login.username = Introduzca su nombre
+index.login.password = Introduzca su contraseña
+index.login.idioma = Indique su idioma 
+
+idioma.castellano = Castellano
+idioma.euskera = Euskera
+idioma.ingles = Ingles
+
+index.login.enviar = Enviar
+
