--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_eu_ES.properties
@@ -3,3 +3,12 @@
 #mensaje de bienvenida
 index.mensaje = Ongi Etorri.
 index.nombreApp = Irakaskuntza Kudeaketaren Aplikaziora.
+index.login.username = Idatzi zure erabiltzailea
+index.login.password = idatzi zure gakoa
+index.login.idioma = Aukeratu zure hizkuntza
+
+idioma.castellano = Euskeraz
+idioma.euskera = Gaztelaniaz
+idioma.ingles = Ingeleraz
+
+index.login.enviar = Bidali
