--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmesages_en_EN.properties
@@ -3,3 +3,12 @@
 #mensaje de bienvenida
 index.mensaje = Welcome
 index.nombreApp = Education Management Application
+index.login.username = Insert your user name
+index.login.password = Insert your password
+index.login.idioma = Chose your language
+
+idioma.castellano = Spanish
+idioma.euskera = Basque
+idioma.ingles = English
+
+index.login.enviar = Send
