--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -6,11 +6,15 @@ heard.title = Education Management
 index.mensaje = Welcome
 index.nombreApp = Education management aplication
 
-index.login.username = Usuario
-index.login.password = contraseña
+index.login.username = Username
+index.login.password = Password
 index.login.idioma = Language
 index.login.enviar = Send
 
 idioma.castellano = Spanish
 idioma.euskera = Baske
 idioma.ingles = English
+
+navBar.alumno = Student
+navBar.profesor = Teacher 
+navBar.curso = Course
