--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -14,3 +14,7 @@ index.login.enviar = Enviar
 idioma.castellano = Castellano
 idioma.euskera = Euskera
 idioma.ingles = Ingles
+
+navBar.alumno = Alumno
+navBar.profesor = Profesor
+navBar.curso = Curso
