--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_EU.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_EU.properties
@@ -6,11 +6,15 @@ heard.title = Irakaskuntza Kudeaketa
 index.mensaje = Ongi etorri
 index.nombreApp = Irakaskuntza kudeaketa alikazioa
 
-index.login.username = Username
-index.login.password = Password
+index.login.username = Erabiltzailea
+index.login.password = Pasahitza
 index.login.idioma = Hizkuntza
 index.login.enviar = Bidali
 
 idioma.castellano = Gastelaniaz
 idioma.euskera = Euskeraz
 idioma.ingles = Inglelesez
+
+navBar.alumno = Ikaslea
+navBar.profesor = Irakasle
+navBar.curso = Ikastaroa
