Incluido cierre de sesión. Añadido Fichero de Propiedades LOG4J

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -6,6 +6,7 @@ index.nombreApp = Teaching Management Application
 index.gestionAlumnos =Management Of Students
 index.gestionProfesores = Management Of Teachers
 index.gestionCursos = Management Of Course
+index.cerrarSesion = Close Session
 index.idioma = Language
 # login
 index.login.usuario = User
