--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -7,6 +7,7 @@ index.gestionAlumnos = Gestión de Alumnos
 index.gestionProfesores = Gestión de Profesores
 index.gestionCursos = Gestión de Cursos
 index.idioma = Idioma
+index.cerrarSesion = Cerrar Sesión
 # login
 index.login.usuario = Usuario
 index.login.username = Usuario
