--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
@@ -6,6 +6,7 @@ index.nombreApp = Irakaskuntza Kudeaketa Aplikazioa
 index.gestionAlumnos = Ikaslea Kudeaketa
 index.gestionProfesores = Irakasle Kudeaketa
 index.gestionCursos = Jakina kudeaketa
+index.cerrarSesion = Itxi Saioa
 index.idioma = Hizkuntza
 # login
 index.login.usuario = Erabiltzaileak
