Implementadas las Cookies de Login. Implementado el baneo de sesión.

--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_en_EN.properties
@@ -12,6 +12,7 @@ index.idioma = Language
 index.login.usuario = User
 index.login.username = User
 index.login.password = Password
+index.usuariosRegistrados = Registred Users
 index.aceptar = Ok
 # idioma
 idioma.castellano = Spanish
