--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_es_ES.properties
@@ -12,6 +12,7 @@ index.cerrarSesion = Cerrar Sesión
 index.login.usuario = Usuario
 index.login.username = Usuario
 index.login.password = Password
+index.usuariosRegistrados = Usuarios Registrados
 index.aceptar = Aceptar
 # idioma
 idioma.castellano = Castellano
