--- a/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
+++ b/gestiondocente/src/main/java/com/ipartek/formacion/controller/i18nmessages_eu_ES.properties
@@ -12,6 +12,7 @@ index.idioma = Hizkuntza
 index.login.usuario = Erabiltzaileak
 index.login.username = Erabiltzaileak
 index.login.password = Password
+index.usuariosRegistrados = Erabiltzaile Erregistratuak
 index.aceptar = Onartu
 # idioma
 idioma.castellano = Gaztelako
